visualizacion partidos ganados

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<div echarts [options]="options" [loading]="!mapLoaded" class="demo-chart"></div>
+<mat-card class="example-card">
+    <mat-card-header>
+        <div mat-card-avatar class="example-header-image"></div>
+        <mat-card-title></mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div echarts [options]="options" [loading]="!mapLoaded" class="demo-chart"></div>
+    </mat-card-content>
+</mat-card>
